parser/y.output

 0: reduce/reduce conflict  (red'ns 122 and 3) on $end
0: shift/reduce conflict (shift 6(0), red'n 3(0)) on ';'
0: shift/reduce conflict (shift 7(0), red'n 3(0)) on '\n'
state 0
	$accept: .compstmt $end 
	opt_terms: .    (122)
	stmts: .    (3)

	$end  reduce 3 (src line 77)
	';'  shift 6
	'\n'  shift 7
	.  reduce 122 (src line 688)

	compstmt  goto 1
	stmts  goto 3
	opt_terms  goto 2
	terms  goto 4
	term  goto 5

state 1
	$accept:  compstmt.$end 

	$end  accept
	.  error


state 2
	compstmt:  opt_terms.    (1)
	stmts:  opt_terms.stmt 
	exprs: .    (47)

	IDENT  shift 22
	NUMBER  shift 23
	STRING  shift 29
	FUNC  shift 34
	RETURN  shift 14
	VAR  shift 9
	THROW  shift 15
	IF  shift 43
	FOR  shift 18
	NEW  shift 38
	TRUE  shift 30
	FALSE  shift 31
	NIL  shift 32
	MODULE  shift 16
	TRY  shift 20
	BREAK  shift 12
	CONTINUE  shift 13
	SWITCH  shift 21
	GO  shift 39
	MAKE  shift 40
	OPCHAN  shift 41
	NULL  shift 33
	WHILE  shift 19
	','  reduce 47 (src line 306)
	'-'  shift 24
	'*'  shift 28
	'{'  shift 36
	'!'  shift 25
	'^'  shift 26
	'&'  shift 27
	'('  shift 37
	'['  shift 35
	.  reduce 1 (src line 68)

	stmt  goto 8
	stmt_if  goto 17
	expr  goto 10
	exprs  goto 42
	expr_many  goto 11

state 3
	compstmt:  stmts.opt_terms 
	stmts:  stmts.terms stmt 
	opt_terms: .    (122)

	';'  shift 6
	'\n'  shift 7
	.  reduce 122 (src line 688)

	opt_terms  goto 44
	terms  goto 45
	term  goto 5

4: shift/reduce conflict (shift 6(0), red'n 123(0)) on ';'
4: shift/reduce conflict (shift 7(0), red'n 123(0)) on '\n'
state 4
	opt_terms:  terms.    (123)
	terms:  terms.term 

	';'  shift 6
	'\n'  shift 7
	.  reduce 123 (src line 689)

	term  goto 46

state 5
	terms:  term.    (124)

	.  reduce 124 (src line 693)


state 6
	term:  ';'.    (126)

	.  reduce 126 (src line 701)


state 7
	term:  '\n'.    (127)

	.  reduce 127 (src line 704)


state 8
	stmts:  opt_terms stmt.    (4)

	.  reduce 4 (src line 84)


state 9
	stmt:  VAR.expr_idents '=' expr_many 
	stmt:  VAR.expr_idents 
	expr_idents: .    (38)

	IDENT  shift 48
	.  reduce 38 (src line 265)

	expr_idents  goto 47

10: shift/reduce conflict (shift 49(1), red'n 42(0)) on '='
state 10
	stmt:  expr.'=' expr 
	stmt:  expr.    (21)
	expr_many:  expr.    (42)
	exprs:  expr.    (48)
	expr:  expr.'?' expr ':' expr 
	expr:  expr.'.' IDENT 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.POW expr 
	expr:  expr.SHIFTLEFT expr 
	expr:  expr.SHIFTRIGHT expr 
	expr:  expr.EQEQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.'>' expr 
	expr:  expr.GE expr 
	expr:  expr.'<' expr 
	expr:  expr.LE expr 
	expr:  expr.PLUSEQ expr 
	expr:  expr.MINUSEQ expr 
	expr:  expr.MULEQ expr 
	expr:  expr.DIVEQ expr 
	expr:  expr.ANDEQ expr 
	expr:  expr.OREQ expr 
	expr:  expr.PLUSPLUS 
	expr:  expr.MINUSMINUS 
	expr:  expr.'|' expr 
	expr:  expr.OROR expr 
	expr:  expr.'&' expr 
	expr:  expr.ANDAND expr 
	expr:  expr.'(' exprs VARARG ')' 
	expr:  expr.'(' exprs ')' 
	expr:  expr.'[' expr ']' 
	expr:  expr.'[' expr ':' expr ']' 
	expr:  expr.OPCHAN expr 

	EQEQ  shift 60
	NEQ  shift 61
	GE  shift 63
	LE  shift 65
	OROR  shift 75
	ANDAND  shift 77
	PLUSEQ  shift 66
	MINUSEQ  shift 67
	MULEQ  shift 68
	DIVEQ  shift 69
	ANDEQ  shift 70
	OREQ  shift 71
	PLUSPLUS  shift 72
	MINUSMINUS  shift 73
	POW  shift 57
	SHIFTLEFT  shift 58
	SHIFTRIGHT  shift 59
	OPCHAN  shift 80
	'='  shift 49
	'?'  shift 50
	','  reduce 48 (src line 310)
	'>'  shift 62
	'<'  shift 64
	'+'  shift 52
	'-'  shift 53
	'*'  shift 54
	'/'  shift 55
	'%'  shift 56
	'.'  shift 51
	'&'  shift 76
	'('  shift 78
	'['  shift 79
	'|'  shift 74
	.  reduce 21 (src line 175)


state 11
	stmt:  expr_many.'=' expr_many 

	'='  shift 81
	.  error


state 12
	stmt:  BREAK.    (10)

	.  reduce 10 (src line 120)


state 13
	stmt:  CONTINUE.    (11)

	.  reduce 11 (src line 125)


state 14
	stmt:  RETURN.exprs 
	exprs: .    (47)

	IDENT  shift 22
	NUMBER  shift 23
	STRING  shift 29
	FUNC  shift 34
	NEW  shift 38
	TRUE  shift 30
	FALSE  shift 31
	NIL  shift 32
	GO  shift 39
	MAKE  shift 40
	OPCHAN  shift 41
	NULL  shift 33
	'-'  shift 24
	'*'  shift 28
	'{'  shift 36
	'!'  shift 25
	'^'  shift 26
	'&'  shift 27
	'('  shift 37
	'['  shift 35
	.  reduce 47 (src line 306)

	expr  goto 83
	exprs  goto 82

state 15
	stmt:  THROW.expr 

	IDENT  shift 22
	NUMBER  shift 23
	STRING  shift 29
	FUNC  shift 34
	NEW  shift 38
	TRUE  shift 30
	FALSE  shift 31
	NIL  shift 32
	GO  shift 39
	MAKE  shift 40
	OPCHAN  shift 41
	NULL  shift 33
	'-'  shift 24
	'*'  shift 28
	'{'  shift 36
	'!'  shift 25
	'^'  shift 26
	'&'  shift 27
	'('  shift 37
	'['  shift 35
	.  error

	expr  goto 84

state 16
	stmt:  MODULE.IDENT '{' compstmt '}' 

	IDENT  shift 85
	.  error


state 17
	stmt:  stmt_if.    (15)

	.  reduce 15 (src line 145)


state 18
	stmt:  FOR.EACH IDENT IN expr '{' compstmt '}' 
	stmt:  FOR.expr_lets TO expr '{' compstmt '}' 
	exprs: .    (47)

	IDENT  shift 22
	NUMBER  shift 23
	STRING  shift 29
	FUNC  shift 34
	NEW  shift 38
	TRUE  shift 30
	FALSE  shift 31
	NIL  shift 32
	GO  shift 39
	MAKE  shift 40
	OPCHAN  shift 41
	NULL  shift 33
	EACH  shift 86
	'-'  shift 24
	'*'  shift 28
	'{'  shift 36
	'!'  shift 25
	'^'  shift 26
	'&'  shift 27
	'('  shift 37
	'['  shift 35
	.  reduce 47 (src line 306)

	expr  goto 89
	exprs  goto 42
	expr_many  goto 88
	expr_lets  goto 87

state 19
	stmt:  WHILE.expr '{' compstmt '}' 

	IDENT  shift 22
	NUMBER  shift 23
	STRING  shift 29
	FUNC  shift 34
	NEW  shift 38
	TRUE  shift 30
	FALSE  shift 31
	NIL  shift 32
	GO  shift 39
	MAKE  shift 40
	OPCHAN  shift 41
	NULL  shift 33
	'-'  shift 24
	'*'  shift 28
	'{'  shift 36
	'!'  shift 25
	'^'  shift 26
	'&'  shift 27
	'('  shift 37
	'['  shift 35
	.  error

	expr  goto 90

 20: reduce/reduce conflict  (red'ns 122 and 3) on CATCH
20: shift/reduce conflict (shift 6(0), red'n 3(0)) on ';'
20: shift/reduce conflict (shift 7(0), red'n 3(0)) on '\n'
state 20
	stmt:  TRY.compstmt CATCH compstmt '}' 
	opt_terms: .    (122)
	stmts: .    (3)

	CATCH  reduce 3 (src line 77)
	';'  shift 6
	'\n'  shift 7
	.  reduce 122 (src line 688)

	compstmt  goto 91
	stmts  goto 3
	opt_terms  goto 2
	terms  goto 4
	term  goto 5

state 21
	stmt:  SWITCH.expr ':' stmt_cases '}' 

	IDENT  shift 22
	NUMBER  shift 23
	STRING  shift 29
	FUNC  shift 34
	NEW  shift 38
	TRUE  shift 30
	FALSE  shift 31
	NIL  shift 32
	GO  shift 39
	MAKE  shift 40
	OPCHAN  shift 41
	NULL  shift 33
	'-'  shift 24
	'*'  shift 28
	'{'  shift 36
	'!'  shift 25
	'^'  shift 26
	'&'  shift 27
	'('  shift 37
	'['  shift 35
	.  error

	expr  goto 92

22: shift/reduce conflict (shift 93(0), red'n 51(5)) on '('
22: shift/reduce conflict (shift 94(0), red'n 51(5)) on '['
state 22
	expr:  IDENT.    (51)
	expr:  IDENT.'(' exprs VARARG ')' 
	expr:  IDENT.'(' exprs ')' 
	expr:  IDENT.'[' expr ']' 
	expr:  IDENT.'[' expr ':' expr ']' 

	'('  shift 93
	'['  shift 94
	.  reduce 51 (src line 323)


state 23
	expr:  NUMBER.    (52)

	.  reduce 52 (src line 329)


state 24
	expr:  '-'.expr 

	IDENT  shift 22
	NUMBER  shift 23
	STRING  shift 29
	FUNC  shift 34
	NEW  shift 38
	TRUE  shift 30
	FALSE  shift 31
	NIL  shift 32
	GO  shift 39
	MAKE  shift 40
	OPCHAN  shift 41
	NULL  shift 33
	'-'  shift 24
	'*'  shift 28
	'{'  shift 36
	'!'  shift 25
	'^'  shift 26
	'&'  shift 27
	'('  shift 37
	'['  shift 35
	.  error

	expr  goto 95

state 25
	expr:  '!'.expr 

	IDENT  shift 22
	NUMBER  shift 23
	STRING  shift 29
	FUNC  shift 34
	NEW  shift 38
	TRUE  shift 30
	FALSE  shift 31
	NIL  shift 32
	GO  shift 39
	MAKE  shift 40
	OPCHAN  shift 41
	NULL  shift 33
	'-'  shift 24
	'*'  shift 28
	'{'  shift 36
	'!'  shift 25
	'^'  shift 26
	'&'  shift 27
	'('  shift 37
	'['  shift 35
	.  error

	expr  goto 96

state 26
	expr:  '^'.expr 

	IDENT  shift 22
	NUMBER  shift 23
	STRING  shift 29
	FUNC  shift 34
	NEW  shift 38
	TRUE  shift 30
	FALSE  shift 31
	NIL  shift 32
	GO  shift 39
	MAKE  shift 40
	OPCHAN  shift 41
	NULL  shift 33
	'-'  shift 24
	'*'  shift 28
	'{'  shift 36
	'!'  shift 25
	'^'  shift 26
	'&'  shift 27
	'('  shift 37
	'['  shift 35
	.  error

	expr  goto 97

state 27
	expr:  '&'.IDENT 
	expr:  '&'.expr '.' IDENT 
